--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
 	"dependencies": {
 		"@fastify/cors": "11.2.0",
 		"@fastify/swagger": "9.6.1",
+		"@prisma/adapter-pg": "7.3.0",
+		"@prisma/client": "7.3.0",
 		"dotenv": "17.2.4",
 		"fastify": "5.7.4",
 		"fastify-type-provider-zod": "6.1.0",
+		"pg": "8.18.0",
 		"zod": "4.3.6"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.14",
 		"@types/node": "25.2.1",
+		"@types/pg": "8.16.0",
+		"prisma": "7.3.0",
 		"tsup": "8.5.1",
 		"tsx": "4.21.0",
 		"typescript": "5.9.3"
