--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,29 @@
+
 {
-	"compilerOptions": {
-		"lib": ["ES2022"],
-		"module": "node16",
-		"target": "ES2022",
-		"baseUrl": "./",
-		"paths": {
+  "compilerOptions": {
+    "types": [],
+   	"lib": ["ES2023"],
+    "module": "nodenext",
+    "target": "ES2023",
+	"baseUrl": "./",
+    "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true,
+    "strict": true,
+    "verbatimModuleSyntax": true,
+    "isolatedModules": true,
+    "noUncheckedSideEffectImports": true,
+    "moduleDetection": "force",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+	"paths": {
 			"@/*":["./src/*"]
-		}
-	},
+		},
+    
+  },
+
 }
+
+
