--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@fastify/swagger-ui": "5.2.5",
 		"@prisma/adapter-pg": "7.3.0",
 		"@prisma/client": "7.3.0",
+		"bcryptjs": "3.0.3",
 		"dotenv": "17.2.4",
 		"fastify": "5.7.4",
 		"fastify-type-provider-zod": "6.1.0",
