Implementação de libs de teste e de testes no projeto

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"dev": "tsx src/index.ts watch",
 		"build": "tsup src --out-dir build",
 		"start": "node build/index.cjs",
-		"format": "biome format --write"
+		"format": "biome format --write",
+		"test": "vitest run",
+		"coverage": "vitest run --coverage"
 	},
 	"type": "module",
 	"keywords": [],
@@ -31,9 +33,12 @@
 		"@biomejs/biome": "2.3.14",
 		"@types/node": "25.2.1",
 		"@types/pg": "8.16.0",
+		"@vitest/coverage-v8": "4.0.18",
 		"prisma": "7.3.0",
 		"tsup": "8.5.1",
 		"tsx": "4.21.0",
-		"typescript": "5.9.3"
+		"typescript": "5.9.3",
+		"vite-tsconfig-paths": "6.1.0",
+		"vitest": "4.0.18"
 	}
 }
