--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@prisma/adapter-pg": "7.3.0",
 		"@prisma/client": "7.3.0",
 		"bcryptjs": "3.0.3",
+		"dayjs": "1.11.19",
 		"dotenv": "17.2.4",
 		"fastify": "5.7.4",
 		"fastify-type-provider-zod": "6.1.0",
