Finalização da implementação dos requisitos totais da documentação e rodando lint e format para padronização do código

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"start": "node build/index.cjs",
 		"format": "biome format --write",
 		"test": "vitest run",
+		"lint": "biome lint src",
 		"coverage": "vitest run --coverage"
 	},
 	"type": "module",
