--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "tsx src/index.ts watch",
+		"dev": "tsx watch src/index.ts",
 		"build": "tsup src --out-dir build",
 		"start": "node build/index.cjs",
 		"format": "biome format --write",
-		"test": "vitest run",
+		"test": "vitest run --project unit",
+		"test:e2e": "vitest run --project e2e",
+		"test:watch": "vitest --project unit",
+		"test:e2e:watch": "vitest --project e2e",
 		"lint": "biome lint src",
 		"coverage": "vitest run --coverage"
 	},
@@ -19,6 +22,7 @@
 	"packageManager": "pnpm@10.28.2",
 	"dependencies": {
 		"@fastify/cors": "11.2.0",
+		"@fastify/jwt": "10.0.0",
 		"@fastify/swagger": "9.6.1",
 		"@fastify/swagger-ui": "5.2.5",
 		"@prisma/adapter-pg": "7.3.0",
@@ -36,6 +40,7 @@
 		"@types/node": "25.2.1",
 		"@types/pg": "8.16.0",
 		"@vitest/coverage-v8": "4.0.18",
+		"@vitest/ui": "4.0.18",
 		"prisma": "7.3.0",
 		"tsup": "8.5.1",
 		"tsx": "4.21.0",
