--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
 		"@biomejs/biome": "2.3.14",
 		"@types/node": "25.2.1",
 		"@types/pg": "8.16.0",
+		"@types/supertest": "6.0.3",
 		"@vitest/coverage-v8": "4.0.18",
 		"@vitest/ui": "4.0.18",
 		"prisma": "7.3.0",
+		"supertest": "7.2.2",
 		"tsup": "8.5.1",
 		"tsx": "4.21.0",
 		"typescript": "5.9.3",
