--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"license": "ISC",
 	"packageManager": "pnpm@10.28.2",
 	"dependencies": {
+		"@fastify/cookie": "11.0.2",
 		"@fastify/cors": "11.2.0",
 		"@fastify/jwt": "10.0.0",
 		"@fastify/swagger": "9.6.1",
