--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -4,20 +4,23 @@ on: [push]
 
 jobs:
   run-unit-tests:
-    name: Run Unit Tests
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
 
+     
       - uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'pnpm'
 
-      - name: Install pnpm
-        run: npm install -g pnpm
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: false
 
+     
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
